# typack

./: .gitignore  CMakeLists.txt  LICENSE  README.md  annotated.html  annotated_dup.js  classes.html  dir_c77dead980acf8ae2d2bcd55e2a91a44.html  dir_c77dead980acf8ae2d2bcd55e2a91a44.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_e68e8157741866f444e17edd764ebbae.html  files.html  functions.html  functions_type.html  functions_vars.html  hierarchy.html  hierarchy.js  index.html  md_doc_2_a_p_i.html  menudata.js  namespacemembers.html  namespacemembers_type.html  namespaces.html  namespaces_dup.js  namespacety.html  namespacety.js  namespacety_1_1detail.html  namespacety_1_1detail.js  navtreedata.js  navtreeindex0.js  pages.html  structty_1_1detail_1_1pack__base-members.html  structty_1_1detail_1_1pack__base.html  structty_1_1detail_1_1pack__base.js  structty_1_1detail_1_1pack__base_1_1all.html  structty_1_1detail_1_1pack__base_1_1any.html  structty_1_1detail_1_1pack__base_1_1concat.html  structty_1_1detail_1_1pack__base_1_1concat_3_01pack_3_01_us_8_8_8_01_4_01_4.html  structty_1_1pack.html  (+16 more)
doc/: API.md  CMakeLists.txt  custom.css  generate-header.sh  header.html  header.html.in
include/typack/: typack.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_6.js  typedefs_7.js  variables_0.js  variables_1.js
test/: CMakeLists.txt  test.cpp  typack_test.cpp
